@@ -6,4 +6,5 @@
 /Makefile.old
 /MANIFEST.skip
 /MYMETA.*
+/MANIFEST
 *swp
